Implementing LanguageContext and LanguageSelector component

--- a/app/data/locales/es-ES.json
+++ b/app/data/locales/es-ES.json
@@ -5,7 +5,7 @@
     "navLinks": [
       {
         "title": "Inicio",
-        "link": "#"
+        "link": "/"
       },
       {
         "title": "Productos",
@@ -50,7 +50,7 @@
     },
     {
       "image": "/categories/3.png",
-      "title": "Auricular"
+      "title": "Auriculares"
     },
     {
       "image": "/categories/4.png",
@@ -58,7 +58,7 @@
     },
     {
       "image": "/categories/5.png",
-      "title": "Aro de Luz"
+      "title": "Ring Light"
     },
     {
       "image": "/categories/6.png",
@@ -68,94 +68,105 @@
   "productsCarousel": {
     "headerTitle": "Más Vendidos",
     "headerButton": "Ver Todos",
-    "bestSellers": [
+    "products": [
       {
         "image": "/products/1.webp",
         "title": "Auricular Bluetooth Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/2.webp",
         "title": "Auricular Bluetooth TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/3.webp",
-        "title": "Auriculares JBL Tune 720BT",
-        "price": 315.00
+        "title": "Auricular JBL Tune 720BT",
+        "price": 315.00,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/5.webp",
         "title": "Micrófono Fifine AM8",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/6.webp",
         "title": "Smartwatch Ultra 9 T200",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/7.webp",
-        "title": "Auriculares Logitech H390",
-        "price": 206.90
+        "title": "Auricular Logitech H390",
+        "price": 206.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/8.webp",
-        "title": "Aro de Luz Bi-Color 16cm",
-        "price": 54.90
+        "title": "Ring Light Bi-Color 16cm",
+        "price": 54.90,
+        "labelButton": "Añadir al Carrito"
       }
-    ],
-    "addCartButton": "Agregar al Carrito"
+    ]
   },
   "bannerImage": {
     "image": "/banners/3.png",
-    "label": "Promoción de Earpods"
+    "label": "Earpods Promoción"
   },
   "headphones": {
     "headerTitle": "Auriculares",
     "headerButton": "Ver Todos",
-    "bestSellers": [
+    "products": [
       {
         "image": "/products/1.webp",
         "title": "Auricular Bluetooth Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/2.webp",
         "title": "Auricular Bluetooth TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/3.webp",
-        "title": "Auriculares JBL Tune 720BT",
-        "price": 315.00
+        "title": "Auricular JBL Tune 720BT",
+        "price": 315.00,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/7.webp",
-        "title": "Auriculares Logitech H390",
-        "price": 206.90
+        "title": "Auricular Logitech H390",
+        "price": 206.90,
+        "labelButton": "Añadir al Carrito"
       }
-    ],
-    "labelButton": "Agregar al Carrito"
+    ]
   },
   "banners": [
     {
       "image": "/banners/4.png",
-      "label": "Promoción de Auricular"
+      "label": "Auricular Promoción"
     },
     {
       "image": "/banners/5.png",
-      "label": "Promoción de Smartwatch"
+      "label": "Smartwatch Promoción"
     }
   ],
   "benefitsCards": [
@@ -166,8 +177,8 @@
     },
     {
       "icon": "bi bi-telephone-outbound",
-      "title": "Atención al Cliente",
-      "subtitle": "Atención de lunes a viernes: 7h a 18h"
+      "title": "Soporte al Cliente",
+      "subtitle": "Atención de Lunes a Viernes: 7h a 18h"
     },
     {
       "icon": "bi bi-credit-card",
@@ -216,15 +227,15 @@
           "title": "Nuestras Políticas",
           "list": [
             {
-              "label": "Política de Privacidad",
+              "label": "Políticas de Privacidad",
               "path": "#"
             },
             {
-              "label": "Política de Devoluciones y Cambios",
+              "label": "Políticas de Devoluciones y Cambios",
               "path": "#"
             },
             {
-              "label": "Política de Entrega y Plazos",
+              "label": "Políticas de Entrega y Plazos",
               "path": "#"
             }
           ]
@@ -234,43 +245,47 @@
     }
   ],
   "productsPage": {
-    "titlePage":"Descubra nuestros productos",
+    "titlePage": "Conoce nuestros productos",
     "products": [
       {
         "image": "/products/1.webp",
-        "title": "Auriculares Bluetooth Readmi Airdots",
-        "description": "Auriculares compactos con buena autonomía y sonido de calidad.",
+        "title": "Auricular Bluetooth Readmi Airdots",
+        "description": "Auricular bluetooth compacto con gran autonomía y sonido de calidad.",
         "category": "Auriculares",
         "color": "negro",
         "brand": "Xiaomi",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/2.webp",
-        "title": "Auriculares Bluetooth TWS I12",
-        "description": "Auriculares Bluetooth con diseño ergonómico.",
+        "title": "Auricular Bluetooth TWS I12",
+        "description": "Auricular bluetooth con diseño ergonómico.",
         "category": "Auriculares",
         "color": "blanco",
         "brand": "TWS",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/3.webp",
-        "title": "Auriculares JBL Tune 720BT",
-        "description": "Auriculares con graves potentes y tecnología Pure Bass de JBL.",
-        "category": "Auriculares grandes",
+        "title": "Auricular JBL Tune 720BT",
+        "description": "Auricular con graves potentes y tecnología Pure Bass de JBL.",
+        "category": "Auriculares",
         "color": "negro",
         "brand": "JBL",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "description": "Cargador portátil de gran capacidad con múltiples entradas.",
-        "category": "Baterías portátiles",
+        "description": "Cargador portátil de alta capacidad y múltiples entradas.",
+        "category": "Power Banks",
         "color": "negro",
         "brand": "Pineng",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/5.webp",
@@ -279,34 +294,38 @@
         "category": "Micrófonos",
         "color": "negro",
         "brand": "Fifine",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/6.webp",
         "title": "Smartwatch Ultra 9 T200",
-        "description": "Reloj inteligente con funciones de salud y notificaciones.",
+        "description": "Reloj inteligente con diversas funcionalidades de salud y notificaciones.",
         "category": "Smartwatches",
         "color": "naranja",
         "brand": "Ultra",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/7.webp",
-        "title": "Auriculares con Micrófono Logitech H390",
-        "description": "Auriculares con micrófono y conexión USB, ideales para oficina en casa.",
-        "category": "Auriculares con micrófono",
+        "title": "Auricular Logitech H390",
+        "description": "Auricular con micrófono y conexión USB, ideal para trabajo remoto.",
+        "category": "Headsets",
         "color": "negro",
         "brand": "Logitech",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Añadir al Carrito"
       },
       {
         "image": "/products/8.webp",
-        "title": "Anillo de Luz Bi-Color 16cm",
+        "title": "Ring Light Bi-Color 16cm",
         "description": "Iluminación ideal para grabaciones y videollamadas.",
         "category": "Iluminación",
         "color": "blanco",
         "brand": "Genérico",
-        "price": 54.90
+        "price": 54.90,
+        "labelButton": "Añadir al Carrito"
       }
     ]
   }
