--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -5,7 +5,7 @@
     "navLinks": [
       {
         "title": "Home",
-        "link": "#"
+        "link": "/"
       },
       {
         "title": "Products",
@@ -68,49 +68,56 @@
   "productsCarousel": {
     "headerTitle": "Best Sellers",
     "headerButton": "View All",
-    "bestSellers": [
+    "products": [
       {
         "image": "/products/1.webp",
         "title": "Bluetooth Earbuds Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/2.webp",
         "title": "Bluetooth Earbuds TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/3.webp",
         "title": "Headphones JBL Tune 720BT",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/5.webp",
         "title": "Microphone Fifine AM8",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/6.webp",
         "title": "Smartwatch Ultra 9 T200",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/7.webp",
         "title": "Headset Logitech H390",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/8.webp",
         "title": "Ring Light Bi-Color 16cm",
-        "price": 54.90
+        "price": 54.90,
+        "labelButton": "Add to Cart"
       }
-    ],
-    "addCartButton": "Add to Cart"
+    ]
   },
   "bannerImage": {
     "image": "/banners/3.png",
@@ -119,34 +126,38 @@
   "headphones": {
     "headerTitle": "Headphones",
     "headerButton": "View All",
-    "bestSellers": [
+    "products": [
       {
         "image": "/products/1.webp",
         "title": "Bluetooth Earbuds Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/2.webp",
         "title": "Bluetooth Earbuds TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/3.webp",
         "title": "Headphones JBL Tune 720BT",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/7.webp",
         "title": "Headset Logitech H390",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Add to Cart"
       }
-    ],
-    "labelButton": "Add to Cart"
+    ]
   },
   "banners": [
     {
@@ -243,7 +254,8 @@
         "category": "Earphones",
         "color": "black",
         "brand": "Xiaomi",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/2.webp",
@@ -252,7 +264,8 @@
         "category": "Earphones",
         "color": "white",
         "brand": "TWS",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/3.webp",
@@ -261,7 +274,8 @@
         "category": "Headphones",
         "color": "black",
         "brand": "JBL",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/4.webp",
@@ -270,7 +284,8 @@
         "category": "Power banks",
         "color": "black",
         "brand": "Pineng",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/5.webp",
@@ -279,7 +294,8 @@
         "category": "Microphones",
         "color": "black",
         "brand": "Fifine",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/6.webp",
@@ -288,7 +304,8 @@
         "category": "Smartwatches",
         "color": "orange",
         "brand": "Ultra",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/7.webp",
@@ -297,7 +314,8 @@
         "category": "Headsets",
         "color": "black",
         "brand": "Logitech",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Add to Cart"
       },
       {
         "image": "/products/8.webp",
@@ -306,7 +324,8 @@
         "category": "Lighting",
         "color": "white",
         "brand": "Generic",
-        "price": 54.90
+        "price": 54.90,
+        "labelButton": "Add to Cart"
       }
     ]
   }
