--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -5,7 +5,7 @@
     "navLinks": [
       {
         "title": "Home",
-        "link": "#"
+        "link": "/"
       },
       {
         "title": "Produtos",
@@ -72,45 +72,52 @@
       {
         "image": "/products/1.webp",
         "title": "Fone Bluetooth Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/2.webp",
         "title": "Fone Bluetooth TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/3.webp",
         "title": "Headphone JBL Tune 720BT",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/5.webp",
         "title": "Microfone Fifine AM8",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/6.webp",
         "title": "Smartwatch Ultra 9 T200",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/7.webp",
         "title": "Headset Logitech H390",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/8.webp",
         "title": "Ring Light Bi-Color 16cm",
-        "price": 54.90
+        "price": 54.90,
+        "labelButton": "Adicionar ao Carrinho"
       }
-    ],
-    "labelButton": "Adicionar ao Carrinho"
+    ]
   },
   "bannerImage": {
     "image": "/banners/3.png",
@@ -123,30 +130,34 @@
       {
         "image": "/products/1.webp",
         "title": "Fone Bluetooth Readmi Airdots",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/2.webp",
         "title": "Fone Bluetooth TWS I12",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/3.webp",
         "title": "Headphone JBL Tune 720BT",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/4.webp",
         "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/7.webp",
         "title": "Headset Logitech H390",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Adicionar ao Carrinho"
       }
-    ],
-    "addCartButton": "Adicionar ao Carrinho"
+    ]
   },
   "banners": [
     {
@@ -243,7 +254,8 @@
         "category": "Fones de ouvido",
         "color": "preto",
         "brand": "Xiaomi",
-        "price": 144.90
+        "price": 144.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/2.webp",
@@ -252,7 +264,8 @@
         "category": "Fones de ouvido",
         "color": "branco",
         "brand": "TWS",
-        "price": 39.90
+        "price": 39.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/3.webp",
@@ -261,7 +274,8 @@
         "category": "Headphones",
         "color": "preto",
         "brand": "JBL",
-        "price": 315.00
+        "price": 315.00,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/4.webp",
@@ -270,7 +284,8 @@
         "category": "Power banks",
         "color": "preto",
         "brand": "Pineng",
-        "price": 49.90
+        "price": 49.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/5.webp",
@@ -279,7 +294,8 @@
         "category": "Microfones",
         "color": "preto",
         "brand": "Fifine",
-        "price": 269.90
+        "price": 269.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/6.webp",
@@ -288,7 +304,8 @@
         "category": "Smartwatches",
         "color": "laranja",
         "brand": "Ultra",
-        "price": 267.00
+        "price": 267.00,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/7.webp",
@@ -297,7 +314,8 @@
         "category": "Headsets",
         "color": "preto",
         "brand": "Logitech",
-        "price": 206.90
+        "price": 206.90,
+        "labelButton": "Adicionar ao Carrinho"
       },
       {
         "image": "/products/8.webp",
@@ -306,7 +324,8 @@
         "category": "Iluminação",
         "color": "branco",
         "brand": "Genérico",
-        "price": 54.90
+        "price": 54.90,
+        "labelButton": "Adicionar ao Carrinho"
       }
     ]
   }
