Implementing AuthForm component, Login and Register pages

--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -13,7 +13,7 @@
       },
       {
         "title": "My Account",
-        "link": "#location"
+        "link": "/pages/auth/login"
       },
       {
         "title": "Contact",
