--- a/app/data/locales/es-ES.json
+++ b/app/data/locales/es-ES.json
@@ -13,7 +13,7 @@
       },
       {
         "title": "Mi Cuenta",
-        "link": "#location"
+        "link": "/pages/auth/login"
       },
       {
         "title": "Contacto",
